3.14/_sources/gui/index.rst.txt


gui
===================================

.. toctree::
   :maxdepth: 4
   :caption: gui:

   CadCapacities
   CharacterWidget
   Filters
   Flag
   Flags
   LayerType
   QgisInterface
   Qgs25DRendererWidget
   QgsAbstractDataSourceWidget
   QgsAbstractFileContentSourceLineEdit
   QgsAbstractProcessingParameterWidgetWrapper
   QgsActionMenu
   QgsAdvancedDigitizingCanvasItem
   QgsAdvancedDigitizingDockWidget
   QgsAdvancedDigitizingFloater
   QgsAggregateMappingModel
   QgsAggregateMappingWidget
   QgsAggregateToolButton
   QgsAlignmentComboBox
   QgsArrowSymbolLayerWidget
   QgsAttributeDialog
   QgsAttributeEditorContext
   QgsAttributeForm
   QgsAttributeFormEditorWidget
   QgsAttributeFormInterface
   QgsAttributeFormRelationEditorWidget
   QgsAttributeFormWidget
   QgsAttributeTableAction
   QgsAttributeTableDelegate
   QgsAttributeTableFilterModel
   QgsAttributeTableMapLayerAction
   QgsAttributeTableModel
   QgsAttributeTableView
   QgsAttributeTypeLoadDialog
   QgsAuthAuthoritiesEditor
   QgsAuthCertEditors
   QgsAuthCertInfo
   QgsAuthCertInfoDialog
   QgsAuthCertManager
   QgsAuthCertTrustPolicyComboBox
   QgsAuthConfigEditor
   QgsAuthConfigSelect
   QgsAuthConfigUriEdit
   QgsAuthEditorWidgets
   QgsAuthIdentitiesEditor
   QgsAuthImportCertDialog
   QgsAuthImportIdentityDialog
   QgsAuthMethodEdit
   QgsAuthMethodPlugins
   QgsAuthServersEditor
   QgsAuthSettingsWidget
   QgsAuthSslConfigDialog
   QgsAuthSslConfigWidget
   QgsAuthSslErrorsDialog
   QgsAuthSslImportDialog
   QgsAuthTrustedCAsDialog
   QgsBasicNumericFormatWidget
   QgsBearingNumericFormatDialog
   QgsBearingNumericFormatWidget
   QgsBlendModeComboBox
   QgsBlurWidget
   QgsBrowserDockWidget
   QgsBrowserGuiModel
   QgsBrowserTreeView
   QgsBrushStyleComboBox
   QgsBusyIndicatorDialog
   QgsCalloutWidget
   QgsCategorizedSymbolRendererWidget
   QgsCentroidFillSymbolLayerWidget
   QgsCharacterSelectorDialog
   QgsCheckableComboBox
   QgsCheckboxSearchWidgetWrapper
   QgsCodeEditor
   QgsCodeEditorCSS
   QgsCodeEditorExpression
   QgsCodeEditorHTML
   QgsCodeEditorJavascript
   QgsCodeEditorPython
   QgsCodeEditorSQL
   QgsCollapsibleGroupBox
   QgsCollapsibleGroupBoxBasic
   QgsColorBox
   QgsColorBrewerColorRampDialog
   QgsColorBrewerColorRampWidget
   QgsColorButton
   QgsColorDialog
   QgsColorEffectWidget
   QgsColorPreviewWidget
   QgsColorRampButton
   QgsColorRampShaderWidget
   QgsColorRampWidget
   QgsColorSchemeList
   QgsColorSchemeModel
   QgsColorSliderWidget
   QgsColorSwatchDelegate
   QgsColorSwatchGrid
   QgsColorSwatchGridAction
   QgsColorTextWidget
   QgsColorWheel
   QgsColorWidget
   QgsColorWidgetAction
   QgsCompoundColorWidget
   QgsConfigureShortcutsDialog
   QgsCoordinateBoundsPreviewMapWidget
   QgsCoordinateOperationWidget
   QgsCptCityColorRampDialog
   QgsCredentialDialog
   QgsCurrencyNumericFormatWidget
   QgsCurveEditorWidget
   QgsCustomDropHandler
   QgsCustomLayerOrderWidget
   QgsCustomProjectOpenHandler
   QgsDashSpaceDialog
   QgsDashSpaceWidget
   QgsDataDefinedRotationDialog
   QgsDataDefinedSizeDialog
   QgsDataDefinedSizeLegendWidget
   QgsDataDefinedValueDialog
   QgsDataDefinedWidthDialog
   QgsDataItemGuiContext
   QgsDataItemGuiProvider
   QgsDataItemGuiProviderRegistry
   QgsDataSourceSelectDialog
   QgsDataSourceSelectWidget
   QgsDatabaseSchemaComboBox
   QgsDatabaseTableComboBox
   QgsDateEdit
   QgsDateTimeEdit
   QgsDateTimeSearchWidgetWrapper
   QgsDefaultSearchWidgetWrapper
   QgsDetailedItemData
   QgsDetailedItemDelegate
   QgsDetailedItemWidget
   QgsDevToolWidget
   QgsDevToolWidgetFactory
   QgsDial
   QgsDialog
   QgsDockWidget
   QgsDoubleSpinBox
   QgsDrawSourceWidget
   QgsDualView
   QgsEditConditionalFormatRuleWidget
   QgsEditorConfigWidget
   QgsEditorWidgetAutoConfPlugin
   QgsEditorWidgetFactory
   QgsEditorWidgetRegistry
   QgsEditorWidgetWrapper
   QgsEffectDrawModeComboBox
   QgsEffectStackCompactWidget
   QgsEffectStackPropertiesDialog
   QgsEffectStackPropertiesWidget
   QgsEllipseSymbolLayerWidget
   QgsEncodingFileDialog
   QgsEncodingSelectionDialog
   QgsErrorDialog
   QgsExpressionBuilderDialog
   QgsExpressionBuilderWidget
   QgsExpressionHighlighter
   QgsExpressionItem
   QgsExpressionItemSearchProxy
   QgsExpressionLineEdit
   QgsExpressionPreviewWidget
   QgsExpressionSelectionDialog
   QgsExpressionStoreDialog
   QgsExpressionTreeView
   QgsExtentGroupBox
   QgsExtentWidget
   QgsExternalResourceWidget
   QgsFeatureListComboBox
   QgsFeatureListModel
   QgsFeatureListView
   QgsFeatureListViewDelegate
   QgsFeatureModel
   QgsFeaturePickerWidget
   QgsFeatureSelectionDlg
   QgsFeatureSelectionModel
   QgsFieldComboBox
   QgsFieldConditionalFormatWidget
   QgsFieldExpressionWidget
   QgsFieldMappingModel
   QgsFieldMappingWidget
   QgsFieldValidator
   QgsFieldValuesLineEdit
   QgsFileDownloaderDialog
   QgsFileWidget
   QgsFilledMarkerSymbolLayerWidget
   QgsFilterLineEdit
   QgsFindFilesByPatternDialog
   QgsFindFilesByPatternWidget
   QgsFloatingWidget
   QgsFocusWatcher
   QgsFontButton
   QgsFontMarkerSymbolLayerWidget
   QgsFormAnnotation
   QgsFractionNumericFormatWidget
   QgsGeometryGeneratorSymbolLayerWidget
   QgsGeometryRubberBand
   QgsGlowWidget
   QgsGradientColorRampDialog
   QgsGradientFillSymbolLayerWidget
   QgsGradientStopEditor
   QgsGraduatedHistogramWidget
   QgsGraduatedSymbolRendererWidget
   QgsGroupBoxCollapseButton
   QgsGroupWmsDataDialog
   QgsGui
   QgsHashedLineSymbolLayerWidget
   QgsHeatmapRendererWidget
   QgsHelp
   QgsHighlight
   QgsHighlightableLineEdit
   QgsHillshadeRendererWidget
   QgsHistogramWidget
   QgsHtmlWidgetWrapper
   QgsIFeatureSelectionManager
   QgsIdentifyMenu
   QgsImageSourceLineEdit
   QgsInvertedPolygonRendererWidget
   QgsKeyValueWidget
   QgsLUDialog
   QgsLabelObstacleSettingsWidget
   QgsLabelSettingsWidgetBase
   QgsLabelSettingsWidgetDialog
   QgsLayerPropertiesWidget
   QgsLayerTreeEmbeddedConfigWidget
   QgsLayerTreeEmbeddedWidgetProvider
   QgsLayerTreeEmbeddedWidgetRegistry
   QgsLayerTreeMapCanvasBridge
   QgsLayerTreeView
   QgsLayerTreeViewDefaultActions
   QgsLayerTreeViewIndicator
   QgsLayerTreeViewMenuProvider
   QgsLayoutComboBox
   QgsLayoutConfigObject
   QgsLayoutCustomDropHandler
   QgsLayoutDesignerInterface
   QgsLayoutItemAbstractGuiMetadata
   QgsLayoutItemBaseWidget
   QgsLayoutItemComboBox
   QgsLayoutItemGuiGroup
   QgsLayoutItemGuiRegistry
   QgsLayoutItemPropertiesDialog
   QgsLayoutItemPropertiesWidget
   QgsLayoutRuler
   QgsLayoutUnitsComboBox
   QgsLayoutView
   QgsLayoutViewEllipticalRubberBand
   QgsLayoutViewMenuProvider
   QgsLayoutViewMouseEvent
   QgsLayoutViewRectangularRubberBand
   QgsLayoutViewRubberBand
   QgsLayoutViewTool
   QgsLayoutViewToolAddItem
   QgsLayoutViewToolAddNodeItem
   QgsLayoutViewToolEditNodes
   QgsLayoutViewToolMoveItemContent
   QgsLayoutViewToolPan
   QgsLayoutViewToolSelect
   QgsLayoutViewToolTemporaryKeyPan
   QgsLayoutViewToolTemporaryKeyZoom
   QgsLayoutViewToolTemporaryMousePan
   QgsLayoutViewToolZoom
   QgsLayoutViewTriangleRubberBand
   QgsLegendFilterButton
   QgsLegendPatchShapeButton
   QgsLegendPatchShapeDialog
   QgsLegendPatchShapeWidget
   QgsLimitedRandomColorRampDialog
   QgsLimitedRandomColorRampWidget
   QgsLinePatternFillSymbolLayerWidget
   QgsListWidget
   QgsLocatorWidget
   QgsLongLongValidator
   QgsManageConnectionsDialog
   QgsMapCanvas
   QgsMapCanvasAnnotationItem
   QgsMapCanvasInteractionBlocker
   QgsMapCanvasItem
   QgsMapCanvasSnappingUtils
   QgsMapCanvasTracer
   QgsMapCanvasUtils
   QgsMapLayerAction
   QgsMapLayerActionRegistry
   QgsMapLayerComboBox
   QgsMapLayerConfigWidget
   QgsMapLayerConfigWidgetFactory
   QgsMapLayerStyleManagerWidget
   QgsMapMouseEvent
   QgsMapOverviewCanvas
   QgsMapTip
   QgsMapTool
   QgsMapToolAdvancedDigitizing
   QgsMapToolCapture
   QgsMapToolDigitizeFeature
   QgsMapToolEdit
   QgsMapToolEmitPoint
   QgsMapToolExtent
   QgsMapToolIdentify
   QgsMapToolIdentifyFeature
   QgsMapToolPan
   QgsMapToolZoom
   QgsMapUnitScaleDialog
   QgsMapUnitScaleWidget
   QgsMarkerLineSymbolLayerWidget
   QgsMaskMarkerSymbolLayerWidget
   QgsMenuHeader
   QgsMenuHeaderWidgetAction
   QgsMessageBar
   QgsMessageBarItem
   QgsMessageLogViewer
   QgsMessageViewer
   QgsMetadataWidget
   QgsModelArrowItem
   QgsModelChildAlgorithmGraphicItem
   QgsModelChildDependenciesWidget
   QgsModelCommentGraphicItem
   QgsModelComponentGraphicItem
   QgsModelDesignerDialog
   QgsModelDesignerFlatButtonGraphicItem
   QgsModelDesignerFoldButtonGraphicItem
   QgsModelGraphicsScene
   QgsModelGraphicsView
   QgsModelGroupBoxGraphicItem
   QgsModelOutputGraphicItem
   QgsModelParameterGraphicItem
   QgsModelViewSnapMarker
   QgsMultiBandColorRendererWidget
   QgsMultiEditToolButton
   QgsNewAuxiliaryFieldDialog
   QgsNewAuxiliaryLayerDialog
   QgsNewDatabaseTableNameDialog
   QgsNewDatabaseTableNameWidget
   QgsNewGeoPackageLayerDialog
   QgsNewHttpConnection
   QgsNewMemoryLayerDialog
   QgsNewNameDialog
   QgsNewVectorLayerDialog
   QgsNullSymbolRendererWidget
   QgsNumericFormatConfigurationWidgetFactory
   QgsNumericFormatGuiRegistry
   QgsNumericFormatSelectorWidget
   QgsNumericFormatWidget
   QgsOWSSourceSelect
   QgsOpacityWidget
   QgsOptionsDialogBase
   QgsOptionsDialogHighlightButton
   QgsOptionsDialogHighlightCheckBox
   QgsOptionsDialogHighlightGroupBox
   QgsOptionsDialogHighlightLabel
   QgsOptionsDialogHighlightTree
   QgsOptionsDialogHighlightWidget
   QgsOptionsPageWidget
   QgsOptionsWidgetFactory
   QgsOrderByDialog
   QgsOrganizeTableColumnsDialog
   QgsPaintEffectPropertiesWidget
   QgsPaintEffectWidget
   QgsPalettedRendererWidget
   QgsPanelWidget
   QgsPanelWidgetStack
   QgsPanelWidgetWrapper
   QgsPasswordLineEdit
   QgsPenCapStyleComboBox
   QgsPenJoinStyleComboBox
   QgsPenStyleComboBox
   QgsPercentageNumericFormatWidget
   QgsPixmapLabel
   QgsPluginManagerInterface
   QgsPointClusterRendererWidget
   QgsPointDisplacementRendererWidget
   QgsPointPatternFillSymbolLayerWidget
   QgsPresetColorRampDialog
   QgsPresetColorRampWidget
   QgsPreviewEffect
   QgsProcessingAbstractParameterDefinitionWidget
   QgsProcessingAlgorithmConfigurationWidget
   QgsProcessingAlgorithmConfigurationWidgetFactory
   QgsProcessingAlgorithmDialogBase
   QgsProcessingContextGenerator
   QgsProcessingGui
   QgsProcessingGuiRegistry
   QgsProcessingHiddenWidgetWrapper
   QgsProcessingLayerOutputDestinationWidget
   QgsProcessingMapLayerComboBox
   QgsProcessingModelerParameterWidget
   QgsProcessingMultipleInputDialog
   QgsProcessingMultipleInputPanelWidget
   QgsProcessingMultipleSelectionDialog
   QgsProcessingMultipleSelectionPanelWidget
   QgsProcessingParameterDefinitionDialog
   QgsProcessingParameterDefinitionWidget
   QgsProcessingParameterWidgetContext
   QgsProcessingParameterWidgetFactoryInterface
   QgsProcessingParametersGenerator
   QgsProcessingParametersWidget
   QgsProcessingRecentAlgorithmLog
   QgsProcessingToolboxModel
   QgsProcessingToolboxModelAlgorithmNode
   QgsProcessingToolboxModelGroupNode
   QgsProcessingToolboxModelNode
   QgsProcessingToolboxModelProviderNode
   QgsProcessingToolboxModelRecentNode
   QgsProcessingToolboxProxyModel
   QgsProcessingToolboxTreeView
   QgsProjectStorageGuiProvider
   QgsProjectStorageGuiRegistry
   QgsProjectionSelectionDialog
   QgsProjectionSelectionTreeWidget
   QgsProjectionSelectionWidget
   QgsPropertyAssistantWidget
   QgsPropertyOverrideButton
   QgsProviderConnectionComboBox
   QgsProviderGuiMetadata
   QgsProviderGuiRegistry
   QgsProxyStyle
   QgsQmlWidgetWrapper
   QgsQueryBuilder
   QgsRandomMarkerFillSymbolLayerWidget
   QgsRasterBandComboBox
   QgsRasterContourRendererWidget
   QgsRasterFillSymbolLayerWidget
   QgsRasterFormatSaveOptionsWidget
   QgsRasterHistogramWidget
   QgsRasterLayerProperties
   QgsRasterLayerSaveAsDialog
   QgsRasterLayerTemporalPropertiesWidget
   QgsRasterMarkerSymbolLayerWidget
   QgsRasterMinMaxWidget
   QgsRasterPyramidsOptionsWidget
   QgsRasterRendererWidget
   QgsRasterTransparencyWidget
   QgsRatioLockButton
   QgsRelationAggregateSearchWidgetWrapper
   QgsRelationEditorWidget
   QgsRelationReferenceSearchWidgetWrapper
   QgsRelationReferenceWidget
   QgsRelationReferenceWidgetWrapper
   QgsRelationWidgetWrapper
   QgsRendererPropertiesDialog
   QgsRendererRasterPropertiesWidget
   QgsRendererRulePropsDialog
   QgsRendererRulePropsWidget
   QgsRendererWidget
   QgsRubberBand
   QgsRuleBasedRendererModel
   QgsRuleBasedRendererWidget
   QgsSVGFillSymbolLayerWidget
   QgsScaleComboBox
   QgsScaleRangeWidget
   QgsScaleVisibilityDialog
   QgsScaleWidget
   QgsScientificNumericFormatWidget
   QgsScrollArea
   QgsSearchQueryBuilder
   QgsSearchWidgetToolButton
   QgsSearchWidgetWrapper
   QgsShadowEffectWidget
   QgsShapeburstFillSymbolLayerWidget
   QgsShortcutsManager
   QgsSimpleFillSymbolLayerWidget
   QgsSimpleLineSymbolLayerWidget
   QgsSimpleMarkerSymbolLayerWidget
   QgsSingleBandGrayRendererWidget
   QgsSingleBandPseudoColorRendererWidget
   QgsSingleSymbolRendererWidget
   QgsSlider
   QgsSmartGroupCondition
   QgsSmartGroupEditorDialog
   QgsSnapIndicator
   QgsSnapToGridCanvasItem
   QgsSourceSelectProvider
   QgsSourceSelectProviderRegistry
   QgsSpinBox
   QgsStatusBar
   QgsStyleExportImportDialog
   QgsStyleGroupSelectionDialog
   QgsStyleItemsListWidget
   QgsStyleManagerDialog
   QgsStyleSaveDialog
   QgsSublayersDialog
   QgsSubstitutionListDialog
   QgsSubstitutionListWidget
   QgsSvgMarkerSymbolLayerWidget
   QgsSvgSelectorDialog
   QgsSvgSelectorGroupsModel
   QgsSvgSelectorListModel
   QgsSvgSelectorWidget
   QgsSvgSourceLineEdit
   QgsSymbolButton
   QgsSymbolLayerWidget
   QgsSymbolLevelsDialog
   QgsSymbolLevelsWidget
   QgsSymbolSelectorDialog
   QgsSymbolSelectorWidget
   QgsSymbolWidgetContext
   QgsSymbolsListWidget
   QgsTabWidget
   QgsTableEditorDialog
   QgsTableEditorWidget
   QgsTableWidgetBase
   QgsTableWidgetItem
   QgsTaskManagerWidget
   QgsTemporalControllerWidget
   QgsTextFormatDialog
   QgsTextFormatPanelWidget
   QgsTextFormatWidget
   QgsTextPreview
   QgsTimeEdit
   QgsTransformWidget
   QgsTreeWidgetItem
   QgsTreeWidgetItemObject
   QgsUnitSelectionWidget
   QgsUserInputWidget
   QgsVScrollArea
   QgsValidityCheckResultsModel
   QgsValidityCheckResultsWidget
   QgsValueMapSearchWidgetWrapper
   QgsValueRelationSearchWidgetWrapper
   QgsVariableEditorWidget
   QgsVectorFieldSymbolLayerWidget
   QgsVectorLayerProperties
   QgsVectorLayerTemporalPropertiesWidget
   QgsVertexMarker
   QgsWidgetWrapper
   QgsWindowManagerInterface
   QtCore
   Targets
